RbA Build/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventoried_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if it is an inventoried item.</description>
        <inlineHelpText>Check this box if it is an inventoried item.</inlineHelpText>
        <label>Inventoried Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sub Products</relationshipLabel>
        <relationshipName>SubProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_Part_Number__c</fullName>
        <formula>IF ( 
OR (
( ISBLANK(Part_Number__c) ),
( Name == Part_Number__c )
),
Name,
(Name &amp; &apos; - &apos; &amp; Part_Number__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product configuration for this product with picklist values, makeability and other settings</description>
        <inlineHelpText>The product configuration for this product with picklist values, makeability and other settings</inlineHelpText>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>FF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay Bow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entry Door</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Enable_Serialized_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if stock information for this product is tracked at the serial number level. If this flag is checked, serial number information will be captured in all ServiceMax inventory transactions.</description>
        <inlineHelpText>Flag indicates if stock information for this product is tracked at the serial number level. If this flag is checked, serial number information will be captured in all ServiceMax inventory transactions.</inlineHelpText>
        <label>Enable Serialized Tracking of Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Inherit_Parent_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if installed products of this product inherit the parent&apos;s warranty automatically. If not, this product should be linked to a warranty template.</description>
        <inlineHelpText>Indicates if installed products of this product inherit the parent&apos;s warranty automatically. If not, this product should be linked to a warranty template.</inlineHelpText>
        <label>Inherit Parent Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Cost__c</fullName>
        <description>Product cost in the default currency for your organization. Used for computing inventory value in ServiceMax.</description>
        <inlineHelpText>Product cost in the default currency for your organization. Used for computing inventory value in ServiceMax.</inlineHelpText>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Line__c</fullName>
        <description>Product Line is another way to classify your products (similar to product family). Typically Product Line applies to a broader group and product family to a specific set of products within a product line.</description>
        <inlineHelpText>Product Line is another way to classify your products (similar to product family).</inlineHelpText>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Type__c</fullName>
        <description>Picklist values here will be matched with similar field in Custom Coverage object to find applicable coverage</description>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wearable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Replacement_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if there are any replacement products defined for this product. Set automatically by Manage Replacements feature</description>
        <inlineHelpText>Flag indicates if there are any replacement products defined for this product. Set automatically by Manage Replacements feature</inlineHelpText>
        <label>Replacement Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Stockable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if this product is stockable. ServiceMax does not maintain inventory of non-stockable products.</description>
        <inlineHelpText>Flag indicates if this product is stockable. ServiceMax does not maintain inventory of non-stockable products.</inlineHelpText>
        <label>Stockable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Tracking__c</fullName>
        <description>If and how this product is tracked when sold to customers. Serialized products are tracked by unique serial numbers. Lot/Batch tracked items are identified by the batch or lot numbers. Non-tracked items do not have a lot or serial number.</description>
        <inlineHelpText>If and how this product is tracked when sold to customers. Serialized products are tracked by unique serial numbers. Lot/Batch tracked items are identified by the batch or lot numbers. Non-tracked items do not have a lot or serial number.</inlineHelpText>
        <label>Tracking</label>
        <picklist>
            <picklistValues>
                <fullName>Serialized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lot/Batch Tracked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Tracked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Unit_Of_Measure__c</fullName>
        <description>Unit of measure for this product</description>
        <inlineHelpText>Unit of measure for this product</inlineHelpText>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UI_Maximum__c</fullName>
        <label>UI Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UI_Minimum__c</fullName>
        <label>UI Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>New_Products_Needing_Review</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Vendor__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <label>New Products Needing Review</label>
    </listViews>
    <recordTypes>
        <fullName>Child_Product</fullName>
        <active>true</active>
        <label>Child Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Product</fullName>
        <active>true</active>
        <label>Master Product</label>
    </recordTypes>
</CustomObject>